feat: reorganize tools starter